--- a/css/openlive3d.css
+++ b/css/openlive3d.css
@@ -11,7 +11,7 @@ div.bgimg {
     left: 0%;
     width: 100%;
     height: 100%;
-    z-index: -2;
+    z-index: -3;
 }
 div.systembox {
     position: absolute;
@@ -85,11 +85,24 @@ span {
     font-family: sans-serif;
     font-size: 16px;
     width: 250px;
-    z-index: 5;
+    z-index: 6;
 }
 div.vrm {
     position: absolute;
     top: 0%;
     left: 0%;
-    z-index: -1;
+}
+canvas.backgroundeffect {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    z-index: -2;
+    pointer-events: none;
+}
+canvas.foregroundeffect {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    z-index: 1;
+    pointer-events: none;
 }
